// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsItem component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1vtf12y"
  >
    <div
      class="ant-card-cover"
    >
      <img
        alt="Profile"
        src="https://image.tmdb.org/t/p/w500test/image"
      />
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreditsItem component matches snapshot with NoImage 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered css-dev-only-do-not-override-1vtf12y"
  >
    <div
      class="ant-card-cover"
    >
      <div
        class="ant-card-cover--no-image"
      >
        <img
          alt=""
          src="test-file-stub"
        />
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      />
    </div>
  </div>
</DocumentFragment>
`;
